[gd_scene load_steps=4 format=2]

[ext_resource path="res://Menus/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://Menus/PixelFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Menus/SettingsMenu.tscn" type="PackedScene" id=3]

[node name="PauseMenu" type="Control"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
SettingsMenu = ExtResource( 3 )

[node name="PanelContainer" type="PanelContainer" parent="."]
anchor_bottom = 1.0
margin_right = 213.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer"]
margin_left = 7.0
margin_top = 7.0
margin_right = 206.0
margin_bottom = 263.0

[node name="ResumeButton" type="Button" parent="PanelContainer/VBoxContainer"]
margin_right = 199.0
margin_bottom = 23.0
custom_fonts/font = ExtResource( 2 )
text = "Resume"
flat = true

[node name="SettingsButton" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 27.0
margin_right = 199.0
margin_bottom = 50.0
custom_fonts/font = ExtResource( 2 )
text = "Settings"
flat = true

[node name="ExitButton" type="Button" parent="PanelContainer/VBoxContainer"]
margin_top = 54.0
margin_right = 199.0
margin_bottom = 77.0
custom_fonts/font = ExtResource( 2 )
text = "Exit to Menu"
flat = true

[node name="Tween" type="Tween" parent="."]
[connection signal="focus_entered" from="PanelContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_focus_entered"]
[connection signal="mouse_entered" from="PanelContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_mouse_entered"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/ResumeButton" to="." method="_on_ResumeButton_pressed"]
[connection signal="focus_entered" from="PanelContainer/VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_focus_entered"]
[connection signal="mouse_entered" from="PanelContainer/VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_mouse_entered"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/SettingsButton" to="." method="_on_SettingsButton_pressed"]
[connection signal="focus_entered" from="PanelContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_focus_entered"]
[connection signal="mouse_entered" from="PanelContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_mouse_entered"]
[connection signal="pressed" from="PanelContainer/VBoxContainer/ExitButton" to="." method="_on_ExitButton_pressed"]
